Move from setup.py to setup.cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,27 @@
-[bumpversion]
-current_version = 0.0.4
-commit = True
-tag = True
+[metadata]
+name = certificate_watcher
+version = attr: certificate_watcher.__version__
+description = Watch expiration of certificates of a bunch of websites.
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8
+author = Julien Palard
+author_email = julien@palard.fr
+url = https://github.com/JulienPalard/certificate_watcher
+license = MIT license
+keywords = ssl tls certificate https watch sysadmin cron
+classifiers =
+    Development Status :: 3 - Alpha
+    Intended Audience :: System Administrators
+    License :: OSI Approved :: MIT License
+    Natural Language :: English
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
 
-[bumpversion:file:setup.py]
-search = version="{current_version}"
-replace = version="{new_version}"
+[options]
+py_modules = certificate_watcher
 
-[bumpversion:file:certificate_watcher.py]
-search = __version__ = "{current_version}"
-replace = __version__ = "{new_version}"
-
-[bdist_wheel]
-universal = 1
-
+[options.entry_points]
+console_scripts =
+    certificate_watcher=certificate_watcher:main
