--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dynamic = ["version"]
+requires-python = ">= 3.7"
+dependencies = [
+    "ocsp-checker",
+]
 
 [project.readme]
 file = "README.md"
